Project

General

Profile

Actions

Bug #39440

closed

ceph tell injectargs not working with mgr daemon

Added by Vikhyat Umrao about 5 years ago. Updated almost 5 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Support
Tags:
Backport:
mimic luminous nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

- While running `ceph tell` with ceph mgr daemon injectargs it gives an error.

# ceph tell mgr.`hostname -s` injectargs '--mon_pg_warn_max_object_skew 20'

no valid command found; 10 closest matches:
pg cancel-force-recovery <pgid> [<pgid>...]
pg force-backfill <pgid> [<pgid>...]
pg deep-scrub <pgid>
pg scrub <pgid>
pg force-recovery <pgid> [<pgid>...]
pg repair <pgid>
pg ls {<int>} {<states> [<states>...]}
pg ls-by-osd <osdname (id|osd.id)> {<int>} {<states> [<states>...]}
pg debug unfound_objects_exist|degraded_pgs_exist
pg dump_stuck {inactive|unclean|stale|undersized|degraded [inactive|unclean|stale|undersized|degraded...]} {<int>}
Error EINVAL: invalid command

- Work perfectly fine with `ceph daemon mgr.`hostname -s` config set` command.

# ceph daemon mgr.`hostname -s` config set mon_pg_warn_max_object_skew 20
{
    "success": "mon_pg_warn_max_object_skew = '20.000000' (not observed, change may require restart) " 
}
Actions #1

Updated by Vikhyat Umrao about 5 years ago

  • Affected Versions v12.2.8 added
  • Component(RADOS) Manager (RADOS bits) added
Actions #2

Updated by Vikhyat Umrao about 5 years ago

- Tested in master branch vstart cluster still same so it is not fixed in master.

$ bin/ceph tell mgr.x injectargs '--mon_pg_warn_max_object_skew 20'

*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
2019-04-23 11:09:49.105 7f2726f2e700 -1 WARNING: all dangerous and experimental features are enabled.
2019-04-23 11:09:49.178 7f2726f2e700 -1 WARNING: all dangerous and experimental features are enabled.
no valid command found; 10 closest matches:
orchestrator mds rm <svc_id>
orchestrator status
orchestrator device ls {<host> [<host>...]} {json|plain} {--refresh}
orchestrator service start|stop|reload <svc_type> <svc_name>
orchestrator nfs rm <svc_id>
orchestrator mon update <int> {<hosts> [<hosts>...]}
orchestrator nfs update <svc_id> <int>
orchestrator mgr update <int> {<hosts> [<hosts>...]}
orchestrator service ls {<host>} {mon|mgr|osd|mds|nfs|rgw|rbd-mirror} {<svc_id>} {json|plain}
orchestrator rgw rm <svc_id>
Error EINVAL: invalid command

- Works fine with daemon config set.

$ bin/ceph daemon mgr.x config set mon_pg_warn_max_object_skew 20

*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
{
    "success": "mon_pg_warn_max_object_skew = '20.000000' (not observed, change may require restart) " 
}
Actions #3

Updated by Vikhyat Umrao about 5 years ago

- With MON it works so looks like we need to integrate ceph tell injectargs with MGR daemon.

$ bin/ceph tell mon.a injectargs '--mon_pg_warn_max_object_skew 20'

*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
2019-04-23 11:13:46.592 7f211a4f7700 -1 WARNING: all dangerous and experimental features are enabled.
2019-04-23 11:13:46.665 7f211a4f7700 -1 WARNING: all dangerous and experimental features are enabled.
injectargs:mon_pg_warn_max_object_skew = '20.000000' (not observed, change may require restart) 
Actions #4

Updated by Vikhyat Umrao about 5 years ago

  • Affected Versions v15.0.0 added
  • Affected Versions deleted (v12.2.8)
Actions #5

Updated by Vikhyat Umrao about 5 years ago

  • Status changed from New to In Progress
  • Assignee set to Vikhyat Umrao
Actions #6

Updated by Vikhyat Umrao about 5 years ago

  • Backport set to mimic luminous nautilus
  • Pull request ID set to 27762
Actions #7

Updated by Vikhyat Umrao about 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #8

Updated by Vikhyat Umrao about 5 years ago

  • Project changed from RADOS to mgr
Actions #9

Updated by Vikhyat Umrao almost 5 years ago

  • Status changed from Fix Under Review to Closed

- Please use 'ceph config set' command.

# ceph config set mon_pg_warn_max_object_skew 20
Set mon_pg_warn_max_object_skew to 20

# ceph daemon mgr.`hostname -s` config show | grep mon_pg_warn_max_object_skew
    "mon_pg_warn_max_object_skew": "20.000000",

For more details check the PR - https://github.com/ceph/ceph/pull/27762.

Actions

Also available in: Atom PDF