mgr: injectargs support for mgr daemon Fixes: http://tracker.ceph.com/issues/39440

Signed-off-by: Vikhyat Umrao <vumrao@redhat.com>